--- a/trivia-styles.css
+++ b/trivia-styles.css
@@ -11,9 +11,7 @@ html,body{
     align-items: center;
     text-align: center;
     margin:  20px 150px 150px 150px;
-    padding: 30px;
-    
-    
+    padding: 10px; 
 }
 
 #question{
@@ -38,9 +36,9 @@ body>div>h2{
     padding: 20px;
 }
 .tr-fls-button{
-    margin-left: 200px;
-    margin-right: 200px;
-    padding: 20px;
+    display: inline-block;
+    justify-content: center;
+    padding: 10px;
 }
 #true-button{
     font-family: 'Times New Roman', Times, serif ;
@@ -48,6 +46,7 @@ body>div>h2{
     color:white;
     background-color: rgba(29, 179, 29, 0.612) ;
     border: solid rgba(29, 179, 29, 0.612);
+    border
     border-radius: 5px;
     width: 250px;
     height: 50px;
