--- a/trivia-styles.css
+++ b/trivia-styles.css
@@ -10,7 +10,6 @@ html,body{
     background-color: rgba(255, 235, 205, 0.936);
     align-items: center;
     text-align: center;
-    margin:  20px 150px 150px 150px;
     padding: 10px; 
 }
 
@@ -20,12 +19,11 @@ html,body{
    
 }
 body>div>h1{
+margin-top: 30px;
+    background-color: white;
     margin-top: 0px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 70px;
-    margin-left: 200px;
-    margin-right: 200px;
-    padding: 20px;
 }
 body>div>h2{
     font-family: 'Times New Roman', Times, serif;
